# task-cli

./: .gitignore  README.md  pyproject.toml  task_cli.py
src/taskman/: __main__.py  cli.py  task.py
todo/: __main__.py  task.py
