[project]
name = "taskman"
version = "1.0.0"
description = "A CLI that helps you manage tasks"
authors = [
  { name="Sudarshan Bankar", email="sudarshanbankar22@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
taskman = "taskman.cli:main"

[project.urls]
Homepage = "https://github.com/bankarsudarshan/task-cli"

[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"
